--- a/about_us.html
+++ b/about_us.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description"
         content="Kids Dream Entertainment Ltd. began its journey in 2008 with the magical ambition to explore the dreamland of kids  with an amazing event for your kids.">
-    <title>Gallery - Kids Party</title>
+    <title>Gallery - Kids Dream Entertainment</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -31,7 +31,7 @@
         <div class="container">
             <a class="navbar-brand" href="index.html">
                 <img id="nav-logo" src="img/kids-dream-logo.png" alt=""><br>
-                <p id="nav-logo-text">Kids Dream Entertaitment</p>
+                <p id="nav-logo-text">Kids Dream Entertainment</p>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -266,7 +266,7 @@
     <footer>
         <div class="text-center footer-logo">
             <img id="nav-logo" src="img/kids-dream-logo.png" alt=""><br>
-            <p id="nav-logo-text">Kids Dream Entertaitment</p>
+            <p id="nav-logo-text">Kids Dream Entertainment</p>
         </div>
         <div class="container">
             <div class="row footer-div">
