--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description"
-        content="Kids Dream Entertaitment is a Sydney based kid entertaitment service provider providing services in Sydney, Perramatta and Blacktown.">
-    <title>Kids Party</title>
+        content="Kids Dream Entertainment is a Sydney based kid entertainment service provider providing services in Sydney, Perramatta and Blacktown.">
+    <title>Kids Dream Entertainment</title>
     <!-- TODO: kids dream in each page -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
@@ -33,7 +33,7 @@
         <div class="container">
             <a class="navbar-brand" href="index.html">
                 <img id="nav-logo" src="img/kids-dream-logo.png" alt=""><br>
-                <p id="nav-logo-text">Kids Dream Entertaitment</p>
+                <p id="nav-logo-text">Kids Dream Entertainment</p>
                 <!-- TODO: Entertainment -->
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -402,7 +402,7 @@
     <footer>
         <div class="text-center footer-logo">
             <img id="nav-logo" src="img/kids-dream-logo.png" alt=""><br>
-            <p id="nav-logo-text">Kids Dream Entertaitment</p>
+            <p id="nav-logo-text">Kids Dream Entertainment</p>
         </div>
         <div class="container">
             <div class="row footer-div">
