--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description"
-        content="Kids Dream Entertainment is a Sydney based kid entertainment service provider providing services in Sydney, Perramatta and Blacktown.">
+        content="Kids Dream Entertainment is a Sydney, Australia based kids entertainment service provider providing services in Sydney, Perramatta and Blacktown">
+    <meta name="keywords"
+        content="kidsdream, Australia kids entertainment, Sydney kids entertainment, kids entertainment" />
     <title>Kids Dream Entertainment</title>
-    <!-- TODO: kids dream in each page -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -34,7 +35,6 @@
             <a class="navbar-brand" href="index.html">
                 <img id="nav-logo" src="img/kids-dream-logo.png" alt=""><br>
                 <p id="nav-logo-text">Kids Dream Entertainment</p>
-                <!-- TODO: Entertainment -->
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
