--- a/index.html
+++ b/index.html
@@ -1,8 +1,17 @@
 <!doctype html>
 <html lang="en">
 <!-- TODO: optimize photos -->
+<!-- TODO: add favicon  -->
 
 <head>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-V04D1LJ447"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-V04D1LJ447');
+    </script>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description"
@@ -10,6 +19,21 @@
     <meta name="keywords"
         content="kidsdream, Australia kids entertainment, Sydney kids entertainment, kids entertainment" />
     <title>Kids Dream Entertainment</title>
+    <script type="application/ld+json">
+        {
+          "@context": "https://schema.org",
+          "@type": "WebSite",
+          "url": "https://kidsdream.com.au/",
+          "potentialAction": {
+            "@type": "SearchAction",
+            "target": {
+              "@type": "EntryPoint",
+              "urlTemplate": "https://kidsdream.com.au/{search_term_string}.html"
+            },
+            "query-input": "required name=search_term_string"
+          }
+        }
+    </script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -19,14 +43,6 @@
         integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="css/style.css">
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-V04D1LJ447"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag() { dataLayer.push(arguments); }
-        gtag('js', new Date());
-
-        gtag('config', 'G-V04D1LJ447');
-    </script>
 </head>
 
 <body>
